@@ -77,7 +77,6 @@ import reactor.core.publisher.Mono;
 import reactor.util.function.Tuple2;
 import reactor.util.function.Tuples;
 
-import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -85,7 +84,6 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 /**
  * The reactive MongoDB repository operations implementation.
@@ -137,7 +135,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     @Override
-    public <T> Mono<T> findOne(Class<T> type, Serializable id) {
+    public <T> Mono<T> findOne(Class<T> type, Object id) {
         return withClientSession(clientSession -> {
             RuntimePersistentEntity<T> persistentEntity = runtimeEntityRegistry.getEntity(type);
             MongoDatabase database = getDatabase(persistentEntity, null);
@@ -193,7 +191,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     @Override
-    public <T> Mono<T> findOptional(Class<T> type, Serializable id) {
+    public <T> Mono<T> findOptional(Class<T> type, Object id) {
         return findOne(type, id);
     }
 
@@ -348,7 +346,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
         if (preparedQuery.isAggregate()) {
             MongoAggregation aggregation = preparedQuery.getAggregation();
             if (QUERY_LOG.isDebugEnabled()) {
-                QUERY_LOG.debug("Executing Mongo 'aggregate' with pipeline: {}", aggregation.getPipeline().stream().map(e -> e.toBsonDocument().toJson()).collect(Collectors.toList()));
+                QUERY_LOG.debug("Executing Mongo 'aggregate' with pipeline: {}", aggregation.getPipeline().stream().map(e -> e.toBsonDocument().toJson()).toList());
             }
             return Mono.from(aggregate(clientSession, preparedQuery, BsonDocument.class).first())
                 .map(bsonDocument -> convertResult(database.getCodecRegistry(), resultType, bsonDocument, false))
@@ -577,8 +575,8 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
                 switch (runtimeAssociation.getKind()) {
                     case MANY_TO_MANY:
                     case ONE_TO_MANY:
-                        if (o instanceof Iterable) {
-                            for (Object value : ((Iterable) o)) {
+                        if (o instanceof Iterable<?> iterable) {
+                            for (Object value : iterable) {
                                 triggerPostLoad(value, associatedEntity, annotationMetadata);
                             }
                         }
@@ -697,7 +695,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     private <T> MongoReactiveEntityOperation<T> createMongoInsertOneOperation(MongoOperationContext ctx, RuntimePersistentEntity<T> persistentEntity, T entity) {
-        return new MongoReactiveEntityOperation<T>(ctx, persistentEntity, entity, true) {
+        return new MongoReactiveEntityOperation<>(ctx, persistentEntity, entity, true) {
 
             @Override
             protected void execute() throws RuntimeException {
@@ -722,7 +720,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     private <T> MongoReactiveEntityOperation<T> createMongoReplaceOneOperation(MongoOperationContext ctx, RuntimePersistentEntity<T> persistentEntity, T entity) {
-        return new MongoReactiveEntityOperation<T>(ctx, persistentEntity, entity, false) {
+        return new MongoReactiveEntityOperation<>(ctx, persistentEntity, entity, false) {
 
             final MongoDatabase mongoDatabase = getDatabase(persistentEntity, ctx.repositoryType);
             final MongoCollection<BsonDocument> collection = getCollection(mongoDatabase, persistentEntity, BsonDocument.class);
@@ -759,7 +757,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     private <T> MongoReactiveEntitiesOperation<T> createMongoReplaceOneInBulkOperation(MongoOperationContext ctx, RuntimePersistentEntity<T> persistentEntity, Iterable<T> entities) {
-        return new MongoReactiveEntitiesOperation<T>(ctx, persistentEntity, entities, false) {
+        return new MongoReactiveEntitiesOperation<>(ctx, persistentEntity, entities, false) {
 
             final MongoDatabase mongoDatabase = getDatabase(persistentEntity, ctx.repositoryType);
             final MongoCollection<BsonDocument> collection = getCollection(mongoDatabase, persistentEntity, BsonDocument.class);
@@ -810,7 +808,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
                                                                                       RuntimePersistentEntity<T> persistentEntity,
                                                                                       Iterable<T> entities,
                                                                                       MongoStoredQuery<T, ?> storedQuery) {
-        return new MongoReactiveEntitiesOperation<T>(ctx, persistentEntity, entities, false) {
+        return new MongoReactiveEntitiesOperation<>(ctx, persistentEntity, entities, false) {
 
             @Override
             protected void execute() throws RuntimeException {
@@ -838,7 +836,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     private <T> MongoReactiveEntityOperation<T> createMongoDeleteOneOperation(MongoOperationContext ctx, RuntimePersistentEntity<T> persistentEntity, T entity) {
-        return new MongoReactiveEntityOperation<T>(ctx, persistentEntity, entity, false) {
+        return new MongoReactiveEntityOperation<>(ctx, persistentEntity, entity, false) {
 
             final MongoDatabase mongoDatabase = getDatabase(persistentEntity, ctx.repositoryType);
             final MongoCollection<T> collection = getCollection(mongoDatabase, persistentEntity, persistentEntity.getIntrospection().getBeanType());
@@ -876,7 +874,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     private <T> MongoReactiveEntitiesOperation<T> createMongoDeleteManyOperation(MongoOperationContext ctx, RuntimePersistentEntity<T> persistentEntity, Iterable<T> entities) {
-        return new MongoReactiveEntitiesOperation<T>(ctx, persistentEntity, entities, false) {
+        return new MongoReactiveEntitiesOperation<>(ctx, persistentEntity, entities, false) {
 
             final MongoDatabase mongoDatabase = getDatabase(persistentEntity, ctx.repositoryType);
             final MongoCollection<T> collection = getCollection(mongoDatabase, persistentEntity, persistentEntity.getIntrospection().getBeanType());
@@ -897,7 +895,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
             @Override
             protected void execute() throws RuntimeException {
                 Mono<Tuple2<List<Data>, Long>> entitiesWithRowsUpdated = entities.flatMap(list -> {
-                    List<Bson> filters = list.stream().filter(d -> !d.vetoed).map(d -> ((Bson) d.filter)).collect(Collectors.toList());
+                    List<Bson> filters = list.stream().filter(d -> !d.vetoed).map(d -> ((Bson) d.filter)).toList();
                     Mono<Long> modifiedCount;
                     if (!filters.isEmpty()) {
                         Bson filter = Filters.or(filters);
@@ -926,7 +924,7 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
                                                                                       RuntimePersistentEntity<T> persistentEntity,
                                                                                       Iterable<T> entities,
                                                                                       MongoStoredQuery<T, Number> storedQuery) {
-        return new MongoReactiveEntitiesOperation<T>(ctx, persistentEntity, entities, false) {
+        return new MongoReactiveEntitiesOperation<>(ctx, persistentEntity, entities, false) {
 
             @Override
             protected void execute() throws RuntimeException {
@@ -953,12 +951,12 @@ public final class DefaultReactiveMongoRepositoryOperations extends AbstractMong
     }
 
     private <T> MongoReactiveEntitiesOperation<T> createMongoInsertManyOperation(MongoOperationContext ctx, RuntimePersistentEntity<T> persistentEntity, Iterable<T> entities) {
-        return new MongoReactiveEntitiesOperation<T>(ctx, persistentEntity, entities, true) {
+        return new MongoReactiveEntitiesOperation<>(ctx, persistentEntity, entities, true) {
 
             @Override
             protected void execute() throws RuntimeException {
                 entities = entities.flatMap(list -> {
-                    List<T> toInsert = list.stream().filter(d -> !d.vetoed).map(d -> d.entity).collect(Collectors.toList());
+                    List<T> toInsert = list.stream().filter(d -> !d.vetoed).map(d -> d.entity).toList();
                     if (toInsert.isEmpty()) {
                         return Mono.just(list);
                     }
