@@ -18,15 +18,17 @@ package io.micronaut.data.runtime.operations.internal.sql;
 import io.micronaut.aop.MethodInvocationContext;
 import io.micronaut.context.ApplicationContextProvider;
 import io.micronaut.context.BeanContext;
+import io.micronaut.core.annotation.AnnotationClassValue;
 import io.micronaut.core.annotation.AnnotationMetadata;
 import io.micronaut.core.annotation.Internal;
 import io.micronaut.core.annotation.NonNull;
+import io.micronaut.core.beans.BeanProperty;
+import io.micronaut.core.reflect.ReflectionUtils;
 import io.micronaut.data.annotation.AutoPopulated;
+import io.micronaut.data.annotation.MappedProperty;
 import io.micronaut.data.annotation.Repository;
-import io.micronaut.data.annotation.TypeRole;
+import io.micronaut.data.annotation.TypeDef;
 import io.micronaut.data.exceptions.DataAccessException;
-import io.micronaut.data.exceptions.OptimisticLockException;
-import io.micronaut.data.intercept.annotation.DataMethod;
 import io.micronaut.data.model.Association;
 import io.micronaut.data.model.DataType;
 import io.micronaut.data.model.JsonDataType;
@@ -34,12 +36,12 @@ import io.micronaut.data.model.PersistentEntity;
 import io.micronaut.data.model.PersistentEntityUtils;
 import io.micronaut.data.model.PersistentProperty;
 import io.micronaut.data.model.PersistentPropertyPath;
-import io.micronaut.data.model.query.QueryModel;
-import io.micronaut.data.model.query.QueryParameter;
+import io.micronaut.data.model.jpa.criteria.impl.QueryResultPersistentEntityCriteriaQuery;
 import io.micronaut.data.model.query.builder.QueryResult;
 import io.micronaut.data.model.query.builder.sql.Dialect;
-import io.micronaut.data.model.query.builder.sql.SqlQueryBuilder;
+import io.micronaut.data.model.query.builder.sql.SqlQueryBuilder2;
 import io.micronaut.data.model.runtime.AttributeConverterRegistry;
+import io.micronaut.data.model.runtime.BeanPropertyWithAnnotationMetadata;
 import io.micronaut.data.model.runtime.PreparedQuery;
 import io.micronaut.data.model.runtime.QueryParameterBinding;
 import io.micronaut.data.model.runtime.QueryResultInfo;
@@ -51,11 +53,13 @@ import io.micronaut.data.model.runtime.StoredQuery;
 import io.micronaut.data.operations.HintsCapableRepository;
 import io.micronaut.data.runtime.config.DataSettings;
 import io.micronaut.data.runtime.convert.DataConversionService;
+import io.micronaut.data.runtime.criteria.RuntimeCriteriaBuilder;
 import io.micronaut.data.runtime.date.DateTimeProvider;
 import io.micronaut.data.runtime.mapper.QueryStatement;
 import io.micronaut.data.runtime.mapper.ResultReader;
 import io.micronaut.data.runtime.mapper.sql.JsonQueryResultMapper;
 import io.micronaut.data.runtime.mapper.sql.SqlJsonValueMapper;
+import io.micronaut.data.runtime.mapper.sql.SqlResultEntityTypeMapper;
 import io.micronaut.data.runtime.mapper.sql.SqlTypeMapper;
 import io.micronaut.data.runtime.operations.internal.AbstractRepositoryOperations;
 import io.micronaut.data.runtime.query.MethodContextAwareStoredQueryDecorator;
@@ -63,12 +67,13 @@ import io.micronaut.data.runtime.query.PreparedQueryDecorator;
 import io.micronaut.data.runtime.query.internal.BasicStoredQuery;
 import io.micronaut.data.runtime.query.internal.QueryResultStoredQuery;
 import io.micronaut.inject.BeanDefinition;
+import io.micronaut.inject.annotation.AnnotationMetadataHierarchy;
 import io.micronaut.inject.qualifiers.Qualifiers;
 import io.micronaut.json.JsonMapper;
+import jakarta.persistence.Tuple;
 import org.slf4j.Logger;
 
 import java.io.IOException;
-import java.sql.SQLException;
 import java.util.AbstractMap;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -78,8 +83,9 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.function.BiFunction;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
+
+import static io.micronaut.data.model.runtime.StoredQuery.OperationType;
 
 /**
  * Abstract SQL repository implementation not specifically bound to JDBC.
@@ -93,12 +99,13 @@ import java.util.stream.Stream;
  */
 @Internal
 public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Exception>
-        extends AbstractRepositoryOperations implements ApplicationContextProvider,
-        PreparedQueryDecorator,
-        MethodContextAwareStoredQueryDecorator,
-        HintsCapableRepository {
+    extends AbstractRepositoryOperations implements ApplicationContextProvider,
+    PreparedQueryDecorator,
+    MethodContextAwareStoredQueryDecorator,
+    HintsCapableRepository {
 
     protected static final Logger QUERY_LOG = DataSettings.QUERY_LOG;
+
     protected final String dataSourceName;
     @SuppressWarnings("WeakerAccess")
     protected final ResultReader<RS, String> columnNameResultSetReader;
@@ -108,7 +115,7 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
     protected final QueryStatement<PS, Integer> preparedStatementWriter;
     protected final JsonMapper jsonMapper;
     protected final SqlJsonColumnMapperProvider<RS> sqlJsonColumnMapperProvider;
-    protected final Map<Class, SqlQueryBuilder> queryBuilders = new HashMap<>(10);
+    protected final Map<Class, SqlQueryBuilder2> queryBuilders = new HashMap<>(10);
     protected final Map<Class, String> repositoriesWithHardcodedDataSource = new HashMap<>(10);
     private final Map<QueryKey, SqlStoredQuery> entityInserts = new ConcurrentHashMap<>(10);
     private final Map<QueryKey, SqlStoredQuery> entityUpdates = new ConcurrentHashMap<>(10);
@@ -117,30 +124,30 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
     /**
      * Default constructor.
      *
-     * @param dataSourceName               The datasource name
-     * @param columnNameResultSetReader    The column name result reader
-     * @param columnIndexResultSetReader   The column index result reader
-     * @param preparedStatementWriter      The prepared statement writer
-     * @param dateTimeProvider             The date time provider
-     * @param runtimeEntityRegistry        The entity registry
-     * @param beanContext                  The bean context
-     * @param conversionService            The conversion service
-     * @param attributeConverterRegistry   The attribute converter registry
-     * @param jsonMapper                   The JSON mapper
-     * @param sqlJsonColumnMapperProvider  The SQL JSON column mapper provider
+     * @param dataSourceName              The datasource name
+     * @param columnNameResultSetReader   The column name result reader
+     * @param columnIndexResultSetReader  The column index result reader
+     * @param preparedStatementWriter     The prepared statement writer
+     * @param dateTimeProvider            The date time provider
+     * @param runtimeEntityRegistry       The entity registry
+     * @param beanContext                 The bean context
+     * @param conversionService           The conversion service
+     * @param attributeConverterRegistry  The attribute converter registry
+     * @param jsonMapper                  The JSON mapper
+     * @param sqlJsonColumnMapperProvider The SQL JSON column mapper provider
      */
     protected AbstractSqlRepositoryOperations(
-            String dataSourceName,
-            ResultReader<RS, String> columnNameResultSetReader,
-            ResultReader<RS, Integer> columnIndexResultSetReader,
-            QueryStatement<PS, Integer> preparedStatementWriter,
-            DateTimeProvider<Object> dateTimeProvider,
-            RuntimeEntityRegistry runtimeEntityRegistry,
-            BeanContext beanContext,
-            DataConversionService conversionService,
-            AttributeConverterRegistry attributeConverterRegistry,
-            JsonMapper jsonMapper,
-            SqlJsonColumnMapperProvider<RS> sqlJsonColumnMapperProvider) {
+        String dataSourceName,
+        ResultReader<RS, String> columnNameResultSetReader,
+        ResultReader<RS, Integer> columnIndexResultSetReader,
+        QueryStatement<PS, Integer> preparedStatementWriter,
+        DateTimeProvider<Object> dateTimeProvider,
+        RuntimeEntityRegistry runtimeEntityRegistry,
+        BeanContext beanContext,
+        DataConversionService conversionService,
+        AttributeConverterRegistry attributeConverterRegistry,
+        JsonMapper jsonMapper,
+        SqlJsonColumnMapperProvider<RS> sqlJsonColumnMapperProvider) {
         super(dateTimeProvider, runtimeEntityRegistry, conversionService, attributeConverterRegistry);
         this.dataSourceName = dataSourceName;
         this.columnNameResultSetReader = columnNameResultSetReader;
@@ -149,17 +156,24 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
         this.jsonMapper = jsonMapper;
         this.sqlJsonColumnMapperProvider = sqlJsonColumnMapperProvider;
         Collection<BeanDefinition<Object>> beanDefinitions = beanContext
-                .getBeanDefinitions(Object.class, Qualifiers.byStereotype(Repository.class));
+            .getBeanDefinitions(Object.class, Qualifiers.byStereotype(Repository.class));
         for (BeanDefinition<Object> beanDefinition : beanDefinitions) {
             String targetDs = beanDefinition.stringValue(Repository.class).orElse(null);
             Class<Object> beanType = beanDefinition.getBeanType();
             if (targetDs == null || targetDs.equalsIgnoreCase(dataSourceName)) {
-                SqlQueryBuilder queryBuilder = new SqlQueryBuilder(beanDefinition.getAnnotationMetadata());
+                SqlQueryBuilder2 queryBuilder = new SqlQueryBuilder2(beanDefinition.getAnnotationMetadata());
                 queryBuilders.put(beanType, queryBuilder);
             } else {
                 repositoriesWithHardcodedDataSource.put(beanType, targetDs);
             }
         }
+    }
+
+    /**
+     * @return The result reader that will check for the column existence and return null for {@link ResultReader#readDynamic(Object, Object, DataType)}
+     */
+    protected ResultReader<RS, String> createColumnNameResultSetReaderWithColumnExistenceAware() {
+        return columnNameResultSetReader;
     }
 
     @Override
@@ -170,7 +184,7 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
     @Override
     public <E, R> StoredQuery<E, R> decorate(MethodInvocationContext<?, ?> context, StoredQuery<E, R> storedQuery) {
         Class<?> repositoryType = context.getTarget().getClass();
-        SqlQueryBuilder queryBuilder = findQueryBuilder(repositoryType);
+        SqlQueryBuilder2 queryBuilder = findQueryBuilder(repositoryType);
         RuntimePersistentEntity<E> runtimePersistentEntity = runtimeEntityRegistry.getEntity(storedQuery.getRootEntity());
         return new DefaultSqlStoredQuery<>(storedQuery, runtimePersistentEntity, queryBuilder);
     }
@@ -294,10 +308,10 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
 
         //noinspection unchecked
         return entityInserts.computeIfAbsent(new QueryKey(repositoryType, rootEntity), (queryKey) -> {
-            final SqlQueryBuilder queryBuilder = findQueryBuilder(repositoryType);
-            final QueryResult queryResult = queryBuilder.buildInsert(annotationMetadata, persistentEntity);
+            final SqlQueryBuilder2 queryBuilder = findQueryBuilder(repositoryType);
+            final QueryResult queryResult = queryBuilder.buildInsert(annotationMetadata, new SqlQueryBuilder2.InsertQueryDefinitionImpl(persistentEntity));
 
-            return new DefaultSqlStoredQuery<>(QueryResultStoredQuery.single(DataMethod.OperationType.INSERT, "Custom insert", AnnotationMetadata.EMPTY_METADATA, queryResult, rootEntity), persistentEntity, queryBuilder);
+            return new DefaultSqlStoredQuery<>(QueryResultStoredQuery.single(OperationType.INSERT, "Custom insert", AnnotationMetadata.EMPTY_METADATA, queryResult, rootEntity), persistentEntity, queryBuilder);
         });
     }
 
@@ -314,7 +328,7 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
                                                   RuntimePersistentEntity<T> persistentEntity,
                                                   RuntimeAssociation<T> association) {
         return associationInserts.computeIfAbsent(association, association1 -> {
-            final SqlQueryBuilder queryBuilder = findQueryBuilder(repositoryType);
+            final SqlQueryBuilder2 queryBuilder = findQueryBuilder(repositoryType);
             return queryBuilder.buildJoinTableInsert(persistentEntity, association1);
         });
     }
@@ -338,27 +352,28 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
         final QueryKey key = new QueryKey(repositoryType, rootEntity);
         //noinspection unchecked
         return entityUpdates.computeIfAbsent(key, (queryKey) -> {
-            final SqlQueryBuilder queryBuilder = findQueryBuilder(repositoryType);
+            final SqlQueryBuilder2 queryBuilder = findQueryBuilder(repositoryType);
 
-            final String idName;
-            final PersistentProperty identity = persistentEntity.getIdentity();
-            if (identity != null) {
-                idName = identity.getName();
-            } else {
-                idName = TypeRole.ID;
-            }
+            var criteriaBuilder = new RuntimeCriteriaBuilder(runtimeEntityRegistry);
+            var criteriaUpdate = criteriaBuilder.createCriteriaUpdate(rootEntity);
+            var root = criteriaUpdate.getRoot();
 
-            final QueryModel queryModel = QueryModel.from(persistentEntity)
-                    .idEq(new QueryParameter(idName));
-            List<String> updateProperties = persistentEntity.getPersistentProperties()
-                    .stream().filter(p ->
-                            !((p instanceof Association) && ((Association) p).isForeignKey()) &&
-                                    p.getAnnotationMetadata().booleanValue(AutoPopulated.class, "updateable").orElse(true)
-                    )
-                    .map(PersistentProperty::getName)
-                    .collect(Collectors.toList());
-            final QueryResult queryResult = queryBuilder.buildUpdate(annotationMetadata, queryModel, updateProperties);
-            return new DefaultSqlStoredQuery<>(QueryResultStoredQuery.single(DataMethod.OperationType.UPDATE, "Custom update", AnnotationMetadata.EMPTY_METADATA, queryResult, rootEntity), persistentEntity, queryBuilder);
+            criteriaUpdate.where(
+                criteriaBuilder.equal(root.id(), criteriaBuilder.parameter(Object.class))
+            );
+
+            persistentEntity.getPersistentProperties()
+                .stream().filter(p ->
+                    !(p instanceof Association association && association.isForeignKey()) &&
+                        p.getAnnotationMetadata().booleanValue(AutoPopulated.class, "updateable").orElse(true)
+                )
+                .forEach(prop -> criteriaUpdate.set(prop.getName(), criteriaBuilder.parameter(prop.getType())));
+
+            final QueryResult queryResult = ((QueryResultPersistentEntityCriteriaQuery) criteriaUpdate).buildQuery(annotationMetadata, queryBuilder);
+            return new DefaultSqlStoredQuery<>(
+                QueryResultStoredQuery.single(OperationType.UPDATE, "Custom update", AnnotationMetadata.EMPTY_METADATA, queryResult, rootEntity),
+                persistentEntity,
+                queryBuilder);
         });
     }
 
@@ -374,9 +389,9 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
      */
     protected <T> SqlStoredQuery<T, ?> resolveSqlInsertAssociation(Class<?> repositoryType, RuntimeAssociation<T> association, RuntimePersistentEntity<T> persistentEntity, T entity) {
         String sqlInsert = resolveAssociationInsert(repositoryType, persistentEntity, association);
-        final SqlQueryBuilder queryBuilder = findQueryBuilder(repositoryType);
+        final SqlQueryBuilder2 queryBuilder = findQueryBuilder(repositoryType);
         List<QueryParameterBinding> parameters = new ArrayList<>();
-        for (Map.Entry<PersistentProperty, Object> property : idPropertiesWithValues(persistentEntity.getIdentity(), entity).collect(Collectors.toList())) {
+        for (Map.Entry<PersistentProperty, Object> property : idPropertiesWithValues(persistentEntity.getIdentity(), entity).toList()) {
             parameters.add(new QueryParameterBinding() {
 
                 @Override
@@ -395,12 +410,22 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
                 }
 
                 @Override
+                public Class<?> getParameterConverterClass() {
+                    return property.getKey()
+                        .getAnnotationMetadata()
+                        .getAnnotation(TypeDef.class)
+                        .annotationClassValue("converter")
+                        .flatMap(AnnotationClassValue::getType)
+                        .orElse(null);
+                }
+
+                @Override
                 public Object getValue() {
                     return property.getValue();
                 }
             });
         }
-        for (PersistentPropertyPath pp : idProperties(association.getAssociatedEntity().getIdentity()).collect(Collectors.toList())) {
+        for (PersistentPropertyPath pp : idProperties(association.getAssociatedEntity().getIdentity()).toList()) {
             parameters.add(new QueryParameterBinding() {
 
                 @Override
@@ -422,15 +447,25 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
                 public String[] getPropertyPath() {
                     return pp.getArrayPath();
                 }
+
+                @Override
+                public Class<?> getParameterConverterClass() {
+                    return pp.getProperty()
+                        .getAnnotationMetadata()
+                        .getAnnotation(TypeDef.class)
+                        .annotationClassValue("converter")
+                        .flatMap(AnnotationClassValue::getType)
+                        .orElse(null);
+                }
             });
         }
 
         RuntimePersistentEntity associatedEntity = association.getAssociatedEntity();
-        return new DefaultSqlStoredQuery<>(new BasicStoredQuery<>(sqlInsert, new String[0], parameters, persistentEntity.getIntrospection().getBeanType(), Object.class), associatedEntity, queryBuilder);
+        return new DefaultSqlStoredQuery<>(new BasicStoredQuery<>(sqlInsert, new String[0], parameters, persistentEntity.getIntrospection().getBeanType(), Object.class, OperationType.INSERT), associatedEntity, queryBuilder);
     }
 
-    private SqlQueryBuilder findQueryBuilder(Class<?> repositoryType) {
-        SqlQueryBuilder queryBuilder = queryBuilders.get(repositoryType);
+    private SqlQueryBuilder2 findQueryBuilder(Class<?> repositoryType) {
+        SqlQueryBuilder2 queryBuilder = queryBuilders.get(repositoryType);
         if (queryBuilder != null) {
             return queryBuilder;
         }
@@ -458,8 +493,8 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
     }
 
     protected final <E, R> SqlPreparedQuery<E, R> getSqlPreparedQuery(PreparedQuery<E, R> preparedQuery) {
-        if (preparedQuery instanceof SqlPreparedQuery) {
-            return (SqlPreparedQuery<E, R>) preparedQuery;
+        if (preparedQuery instanceof SqlPreparedQuery<E, R> sqlPreparedQuery) {
+            return sqlPreparedQuery;
         }
         throw new IllegalStateException("Expected for prepared query to be of type: SqlPreparedQuery got: " + preparedQuery.getClass().getName());
     }
@@ -478,23 +513,15 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
      * Does supports batch for update queries.
      *
      * @param persistentEntity The persistent entity
-     * @param dialect          The dialect
+     * @param sqlStoredQuery   The sqlStoredQuery
      * @return true if supported
      */
-    protected boolean isSupportsBatchInsert(PersistentEntity persistentEntity, Dialect dialect) {
-        switch (dialect) {
-            case SQL_SERVER:
-                return false;
-            case MYSQL:
-            case ORACLE:
-                if (persistentEntity.getIdentity() != null) {
-                    // Oracle and MySql doesn't support a batch with returning generated ID: "DML Returning cannot be batched"
-                    return !persistentEntity.getIdentity().isGenerated();
-                }
-                return false;
-            default:
-                return true;
+    protected boolean isSupportsBatchInsert(PersistentEntity persistentEntity, SqlStoredQuery<?, ?> sqlStoredQuery) {
+        // Oracle and MySql doesn't support a batch with returning generated ID: "DML Returning cannot be batched"
+        if (sqlStoredQuery.getOperationType() == OperationType.INSERT_RETURNING) {
+            return false;
         }
+        return isSupportsBatchInsert(persistentEntity, sqlStoredQuery.getDialect());
     }
 
     /**
@@ -504,8 +531,30 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
      * @param dialect          The dialect
      * @return true if supported
      */
-    protected boolean isSupportsBatchUpdate(PersistentEntity persistentEntity, Dialect dialect) {
-        return true;
+    protected boolean isSupportsBatchInsert(PersistentEntity persistentEntity, Dialect dialect) {
+        // Oracle and MySql doesn't support a batch with returning generated ID: "DML Returning cannot be batched"
+        return switch (dialect) {
+            case SQL_SERVER -> false;
+            case MYSQL, ORACLE -> {
+                if (persistentEntity.getIdentity() != null) {
+                    // Oracle and MySql doesn't support a batch with returning generated ID: "DML Returning cannot be batched"
+                    yield !persistentEntity.getIdentity().isGenerated();
+                }
+                yield false;
+            }
+            default -> true;
+        };
+    }
+
+    /**
+     * Does supports batch for update queries.
+     *
+     * @param persistentEntity The persistent entity
+     * @param sqlStoredQuery   The sqlStoredQuery
+     * @return true if supported
+     */
+    protected boolean isSupportsBatchUpdate(PersistentEntity persistentEntity, SqlStoredQuery<?, ?> sqlStoredQuery) {
+        return sqlStoredQuery.getOperationType() != OperationType.UPDATE_RETURNING;
     }
 
     /**
@@ -523,71 +572,33 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
      * Creates {@link SqlTypeMapper} for reading results from single column into an entity. For now, we support reading from JSON column,
      * however in support we might add XML support etc.
      *
-     * @param sqlPreparedQuery the SQL prepared query
-     * @param columnName the column name where we are reading from
-     * @param jsonDataType the JSON representation type
-     * @param resultSetType resultSetType the result set type (different for R2dbc and Jdbc)
+     * @param sqlStoredQuery   the SQL prepared query
+     * @param columnName       the column name where we are reading from
+     * @param jsonDataType     the JSON representation type
+     * @param resultSetType    resultSetType the result set type (different for R2DBC and JDBC)
      * @param persistentEntity the persistent entity
-     * @param loadListener the load listener if needed after entity loaded
+     * @param loadListener     the load listener if needed after entity loaded
+     * @param <T>              the entity type
+     * @param <R>              the result type
      * @return the {@link SqlTypeMapper} able to decode from column value into given type
-     * @param <T> the entity type
-     * @param <R> the result type
      */
-    protected final <T, R> SqlTypeMapper<RS, R> createQueryResultMapper(SqlPreparedQuery<?, ?> sqlPreparedQuery, String columnName, JsonDataType jsonDataType, Class<RS> resultSetType,
+    protected final <T, R> SqlTypeMapper<RS, R> createQueryResultMapper(SqlStoredQuery<?, ?> sqlStoredQuery, String columnName, JsonDataType jsonDataType, Class<RS> resultSetType,
                                                                         RuntimePersistentEntity<T> persistentEntity, BiFunction<RuntimePersistentEntity<Object>, Object, Object> loadListener) {
-        QueryResultInfo queryResultInfo = sqlPreparedQuery.getQueryResultInfo();
+        QueryResultInfo queryResultInfo = sqlStoredQuery.getQueryResultInfo();
         if (queryResultInfo != null && queryResultInfo.getType() != io.micronaut.data.annotation.QueryResult.Type.JSON) {
             throw new IllegalStateException("Unexpected query result type: " + queryResultInfo.getType());
         }
-        return createJsonQueryResultMapper(sqlPreparedQuery, columnName, jsonDataType, resultSetType, persistentEntity, loadListener);
-    }
-
-    /**
-     * Reads an object from the result set and given column.
-     *
-     * @param sqlPreparedQuery the SQL prepared query
-     * @param rs the result set
-     * @param columnName the column name where we are reading from
-     * @param jsonDataType the JSON representation type
-     * @param persistentEntity the persistent entity
-     * @param resultType the result type
-     * @param resultSetType the result set type
-     * @param loadListener the load listener if needed after entity loaded
-     * @return an object read from the result set column
-     * @param <R> the result type
-     * @param <T> the entity type
-     */
-    protected final <R, T> R mapQueryColumnResult(SqlPreparedQuery<?, ?> sqlPreparedQuery, RS rs, String columnName, JsonDataType jsonDataType,
-                                          RuntimePersistentEntity<T> persistentEntity, Class<R> resultType, Class<RS> resultSetType,
-                                          BiFunction<RuntimePersistentEntity<Object>, Object, Object> loadListener) {
-        SqlTypeMapper<RS, R> mapper = createQueryResultMapper(sqlPreparedQuery, columnName, jsonDataType, resultSetType, persistentEntity, loadListener);
-        return mapper.map(rs, resultType);
-    }
-
-    /**
-     * Handles SQL exception, used in context of update but could be used elsewhere.
-     * It can throw custom exception based on the {@link SQLException}.
-     *
-     * @param sqlException the SQL exception
-     * @param dialect the SQL dialect
-     * @return custom exception based on {@link SQLException} that was thrown or that same
-     * exception if nothing specific was about it
-     */
-    protected static Throwable handleSqlException(SQLException sqlException, Dialect dialect) {
-        if (dialect == Dialect.ORACLE) {
-            return OracleSqlExceptionHandler.handleSqlException(sqlException);
-        }
-        return sqlException;
+        return createJsonQueryResultMapper(sqlStoredQuery, columnName, jsonDataType, resultSetType, persistentEntity, loadListener);
     }
 
     /**
      * Return an indicator telling whether prepared query result produces JSON result.
      *
-     * @param preparedQuery the prepared query
+     * @param preparedQuery   the prepared query
      * @param queryResultInfo the query result info, if not null will hold info about result type
      * @return true if result is JSON
      */
-    protected final boolean isJsonResult(PreparedQuery<?, ?> preparedQuery, QueryResultInfo queryResultInfo) {
+    protected final boolean isJsonResult(StoredQuery<?, ?> preparedQuery, QueryResultInfo queryResultInfo) {
         if (preparedQuery.isCount()) {
             return false;
         }
@@ -597,7 +608,7 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
     /**
      * Inserting JSON entity representation (like Oracle Json View) can generate new id, and we support retrieval only numeric auto generated ids.
      *
-     * @param storedQuery the stored query
+     * @param storedQuery      the stored query
      * @param persistentEntity the persistent entity
      * @return true if entity being inserted is JSON entity representation with auto generated numeric id
      */
@@ -643,44 +654,124 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
     /**
      * Creates {@link JsonQueryResultMapper} for JSON deserialization.
      *
-     * @param sqlPreparedQuery the SQL prepared query
-     * @param columnName the column name where query result is stored
-     * @param jsonDataType the json representation type
-     * @param resultSetType the result set type
+     * @param sqlStoredQuery   the SQL prepared query
+     * @param columnName       the column name where query result is stored
+     * @param jsonDataType     the json representation type
+     * @param resultSetType    the result set type
      * @param persistentEntity the persistent entity
-     * @param loadListener the load listener if needed after entity loaded
+     * @param loadListener     the load listener if needed after entity loaded
+     * @param <T>              the entity type
      * @return the {@link JsonQueryResultMapper}
-     * @param <T> the entity type
      */
-    private <T, R> JsonQueryResultMapper<T, RS, R> createJsonQueryResultMapper(SqlPreparedQuery<?, ?> sqlPreparedQuery, String columnName, JsonDataType jsonDataType, Class<RS> resultSetType,
+    private <T, R> JsonQueryResultMapper<T, RS, R> createJsonQueryResultMapper(SqlStoredQuery<?, ?> sqlStoredQuery, String columnName, JsonDataType jsonDataType, Class<RS> resultSetType,
                                                                                RuntimePersistentEntity<T> persistentEntity, BiFunction<RuntimePersistentEntity<Object>, Object, Object> loadListener) {
         return new JsonQueryResultMapper<>(columnName, jsonDataType, persistentEntity, columnNameResultSetReader,
-            sqlJsonColumnMapperProvider.getJsonColumnReader(sqlPreparedQuery, resultSetType), loadListener);
+            sqlJsonColumnMapperProvider.getJsonColumnReader(sqlStoredQuery, resultSetType), loadListener);
     }
 
     /**
-     * Handles {@link SQLException} for Oracle update commands. Can add more logic if needed, but this
-     * now handles only optimistic locking exception for given error code.
+     * @return The first result set index.
+     * @since 4.2.0
      */
-    private static final class OracleSqlExceptionHandler {
-        private static final int JSON_VIEW_ETAG_NOT_MATCHING_ERROR = 42699;
+    protected abstract Integer getFirstResultSetIndex();
 
-        /**
-         * Handles SQL exception for Oracle dialect, used in context of update but could be used elsewhere.
-         * It can throw custom exception based on the {@link SQLException}.
-         * Basically throws {@link OptimisticLockException} if error thrown is matching expected error code
-         * that is used to represent ETAG not matching when updating Json View.
-         *
-         * @param sqlException the SQL exception
-         * @return custom exception based on {@link SQLException} that was thrown or that same
-         * exception if nothing specific was about it
-         */
-        static Throwable handleSqlException(SQLException sqlException) {
-            if (sqlException.getErrorCode() == JSON_VIEW_ETAG_NOT_MATCHING_ERROR) {
-                return new OptimisticLockException("ETAG did not match when updating record: " + sqlException.getMessage(), sqlException);
-            }
-            return sqlException;
+    protected abstract SqlTypeMapper<RS, Tuple> createTupleMapper();
+
+    /**
+     * Creates a result mapper.
+     *
+     * @param preparedQuery The prepared query
+     * @param rsType        The result set type
+     * @param <E>           The entity type
+     * @param <R>           The result type
+     * @return The new mapper
+     * @since 4.2.0
+     */
+    protected <E, R> SqlTypeMapper<RS, R> createMapper(SqlStoredQuery<E, R> preparedQuery, Class<RS> rsType) {
+        if (preparedQuery.getResultType().equals(Tuple.class)) {
+            return (SqlTypeMapper<RS, R>) createTupleMapper();
         }
+        BiFunction<RuntimePersistentEntity<Object>, Object, Object> loadListener;
+        RuntimePersistentEntity<E> persistentEntity = preparedQuery.getPersistentEntity();
+        boolean isEntityResult = preparedQuery.getResultDataType() == DataType.ENTITY;
+        if (isEntityResult) {
+            loadListener = (loadedEntity, o) -> {
+                if (loadedEntity.hasPostLoadEventListeners()) {
+                    return triggerPostLoad(o, loadedEntity, preparedQuery.getAnnotationMetadata());
+                } else {
+                    return o;
+                }
+            };
+        } else {
+            loadListener = null;
+        }
+        QueryResultInfo queryResultInfo = preparedQuery.getQueryResultInfo();
+        if (isJsonResult(preparedQuery, queryResultInfo)) {
+            String column = getJsonColumn(queryResultInfo);
+            JsonDataType jsonDataType = getJsonDataType(queryResultInfo);
+            return createQueryResultMapper(preparedQuery, column, jsonDataType, rsType, persistentEntity, loadListener);
+        }
+        if (isEntityResult) {
+            ResultReader<RS, String> resultReader =
+                preparedQuery.isDtoProjection() ? createColumnNameResultSetReaderWithColumnExistenceAware() : columnNameResultSetReader;
+            return new SqlResultEntityTypeMapper<>(
+                getEntity(preparedQuery.getResultType()),
+                resultReader,
+                preparedQuery.getJoinPaths(),
+                sqlJsonColumnMapperProvider.getJsonColumnReader(preparedQuery, rsType),
+                loadListener,
+                conversionService);
+        }
+        if (preparedQuery.isDtoProjection()) {
+            RuntimePersistentEntity<R> resultPersistentEntity = getEntity(preparedQuery.getResultType());
+            Collection<BeanProperty<R, Object>> beanProperties = resultPersistentEntity.getIntrospection().getBeanProperties();
+            RuntimePersistentEntity<R> dtoPersistentEntity = new RuntimePersistentEntity<>(
+                resultPersistentEntity.getIntrospection(),
+                beanProperties.stream().map(p -> {
+                    if (p.hasAnnotation(MappedProperty.class)) {
+                        return p;
+                    }
+                    RuntimePersistentProperty<E> entityProperty = persistentEntity.getPropertyByName(p.getName());
+                    if (entityProperty == null || !ReflectionUtils.getWrapperType(entityProperty.getType()).equals(ReflectionUtils.getWrapperType(p.getType()))) {
+                        return p;
+                    }
+                    return new BeanPropertyWithAnnotationMetadata<>(
+                        p,
+                        new AnnotationMetadataHierarchy(p.getAnnotationMetadata(), entityProperty.getAnnotationMetadata())
+                    );
+                }).toList()
+            );
+            return new SqlResultEntityTypeMapper<>(
+                dtoPersistentEntity,
+                columnNameResultSetReader,
+                preparedQuery.getJoinPaths(),
+                sqlJsonColumnMapperProvider.getJsonColumnReader(preparedQuery, rsType),
+                null,
+                conversionService);
+        }
+        return new SqlTypeMapper<>() {
+            @Override
+            public boolean hasNext(RS resultSet) {
+                return columnIndexResultSetReader.next(resultSet);
+            }
+
+            @Override
+            public R map(RS rs, Class<R> type) throws DataAccessException {
+                Object v = columnIndexResultSetReader.readDynamic(rs, getFirstResultSetIndex(), preparedQuery.getResultDataType());
+                if (v == null) {
+                    return null;
+                } else if (type.isInstance(v)) {
+                    return (R) v;
+                } else {
+                    return columnIndexResultSetReader.convertRequired(v, type);
+                }
+            }
+
+            @Override
+            public Object read(RS object, String name) {
+                throw new IllegalStateException("Not supported!");
+            }
+        };
     }
 
     /**
@@ -705,7 +796,7 @@ public abstract class AbstractSqlRepositoryOperations<RS, PS, Exc extends Except
             }
             QueryKey queryKey = (QueryKey) o;
             return repositoryType.equals(queryKey.repositoryType) &&
-                    entityType.equals(queryKey.entityType);
+                entityType.equals(queryKey.entityType);
         }
 
         @Override
